# running_analysis

./: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: actions.yml
data/gpx/: medio_maraton_ensenada.gpx
running_analysis/: __init__.py  cli.py  get_speed.py  read_gpx_file.py
src/: app_example.py  half_marathon_ensenada_dataframe.py  half_maraton_ensenada_dataframe.py
tests/: test_get_speed.py  test_half_marathon_ensenada_dataframe.py  test_read_gpx_data.py
tests/data/: Activities.csv
