[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
author = "Guillermo Olvera Guerrero"
author-email = "guolg@ier.unam.mx"
description-file = "README.md"
home-page = "https://github.com/MemoOlv/running_analysis"
module = "running_analysis"
requires = [
    "geopy",
    "gpxpy",
    "matplotlib",
    "matplotlib",
    "numpy",
    "pandas",
    "seaborn",
    "streamlit",
    "typer[all]",
]
requires-python=">=3.8"

[tool.flit.scripts]
running-analysis = "running_analysis.cli:app"
